force-app/main/default/objects/Candidate__c/fields/Position_Applied_For__c.field-meta.xml
<CustomField>
    <fullName>Position_Applied_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position Applied For</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>