force-app/main/default/objects/Candidate__c/fields/Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Number__c</fullName>
    <label>Social Security Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>